fix: configure Surefire to generate JUnit-compatible test reports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,8 @@ jobs:
       if: always()
       with:
         files: |
-          target/surefire-reports/*.xml
+          target/surefire-reports/junitreports/TEST-*.xml
+        check_name: "Test Results (Java ${{ matrix.java }})"
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
