--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,6 +123,6 @@ jobs:
       run: mvn clean compile test
 
     - name: Publish to GitHub Packages
-      run: mvn deploy -DskipTests
+      run: mvn deploy -DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/mikeddavydov/jpwise
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
