--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up JDK 11
       uses: actions/setup-java@v4
@@ -117,28 +119,12 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
     - name: Update version in pom.xml
-      run: mvn versions:set -DnewVersion=${{ steps.extract_version.outputs.VERSION }}
+      run: mvn versions:set -DnewVersion=${{ steps.extract_version.outputs.VERSION }} -DprocessAllModules -DgenerateBackupPoms=false
 
-    - name: Build and test
-      run: mvn clean compile test
-
-    - name: Build sources and javadoc JARs
-      run: |
-        mvn source:jar
-        mvn javadoc:jar
-
-    - name: Install to local repository
-      run: mvn install -DskipTests
+    - name: Build and package
+      run: mvn clean package -DskipTests
 
     - name: Publish to GitHub Packages
-      run: |
-        # Deploy main JAR
-        mvn deploy:deploy-file -DgroupId=io.github.mikeddavydov -DartifactId=jpwise -Dversion=${{ steps.extract_version.outputs.VERSION }} -Dpackaging=jar -Dfile=target/jpwise-${{ steps.extract_version.outputs.VERSION }}.jar -DrepositoryId=github -Durl=https://maven.pkg.github.com/mikeddavydov/jpwise
-        # Deploy POM
-        mvn deploy:deploy-file -DgroupId=io.github.mikeddavydov -DartifactId=jpwise -Dversion=${{ steps.extract_version.outputs.VERSION }} -Dpackaging=pom -Dfile=pom.xml -DrepositoryId=github -Durl=https://maven.pkg.github.com/mikeddavydov/jpwise
-        # Deploy sources JAR
-        mvn deploy:deploy-file -DgroupId=io.github.mikeddavydov -DartifactId=jpwise -Dversion=${{ steps.extract_version.outputs.VERSION }} -Dpackaging=jar -Dclassifier=sources -Dfile=target/jpwise-${{ steps.extract_version.outputs.VERSION }}-sources.jar -DrepositoryId=github -Durl=https://maven.pkg.github.com/mikeddavydov/jpwise
-        # Deploy javadoc JAR
-        mvn deploy:deploy-file -DgroupId=io.github.mikeddavydov -DartifactId=jpwise -Dversion=${{ steps.extract_version.outputs.VERSION }} -Dpackaging=jar -Dclassifier=javadoc -Dfile=target/jpwise-${{ steps.extract_version.outputs.VERSION }}-javadoc.jar -DrepositoryId=github -Durl=https://maven.pkg.github.com/mikeddavydov/jpwise
+      run: mvn deploy -DskipTests --batch-mode
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
