--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>JPWise</name>
     <description>Java Pairwise Testing Framework - A powerful library for generating pairwise test combinations with support for complex parameter relationships and compatibility rules</description>
-    <url>https://github.com/mikeddavydov/jpwise</url>
+    <url>https://github.com/mike-d-davydov/jpwise</url>
 
     <licenses>
         <license>
@@ -26,7 +26,7 @@
             <id>mikeddavydov</id>
             <name>Mikhail Davydov</name>
             <email>mikhail.davydov@example.com</email>
-            <url>https://github.com/mikeddavydov</url>
+            <url>https://github.com/mike-d-davydov</url>
             <roles>
                 <role>developer</role>
                 <role>maintainer</role>
@@ -276,7 +276,7 @@
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -325,19 +325,19 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/mikeddavydov/jpwise</url>
+            <url>https://maven.pkg.github.com/mike-d-davydov/jpwise</url>
         </repository>
         <snapshotRepository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/mikeddavydov/jpwise</url>
+            <url>https://maven.pkg.github.com/mike-d-davydov/jpwise</url>
         </snapshotRepository>
     </distributionManagement>
 
     <!-- SCM information -->
     <scm>
-        <connection>scm:git:git://github.com/mikeddavydov/jpwise.git</connection>
-        <developerConnection>scm:git:ssh://github.com:mikeddavydov/jpwise.git</developerConnection>
-        <url>http://github.com/mikeddavydov/jpwise/tree/main</url>
+        <connection>scm:git:git://github.com/mike-d-davydov/jpwise.git</connection>
+        <developerConnection>scm:git:ssh://github.com:mike-d-davydov/jpwise.git</developerConnection>
+        <url>http://github.com/mike-d-davydov/jpwise/tree/main</url>
     </scm>
 </project>
