--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "java.checkstyle.configuration": "checkstyle.xml",
-    "java.checkstyle.version": "8.41",
+    "java.checkstyle.configuration": "${workspaceFolder}/checkstyle.xml",
+    "java.checkstyle.version": "9.3",
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
     "editor.formatOnType": true,
@@ -10,14 +10,13 @@
     },
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.compile.nullAnalysis.mode": "automatic",
-    "java.format.enabled": true,
     "java.import.generatesMetadataFilesAtProjectRoot": true,
     "java.sources.organizeImports.starThreshold": 99,
     "java.sources.organizeImports.staticStarThreshold": 99,
     "[java]": {
-        "editor.defaultFormatter": "redhat.java",
-        "editor.formatOnSave": true,
-        "editor.formatOnPaste": true,
-        "editor.formatOnType": true
+        "editor.defaultFormatter": null,
+        "editor.formatOnSave": false,
+        "editor.formatOnPaste": false,
+        "editor.formatOnType": false
     }
 }
