--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.9.0</version>
+            <version>7.10.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -119,13 +120,6 @@
             <artifactId>spotbugs-annotations</artifactId>
             <version>4.8.3</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.9</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -211,7 +205,8 @@
                 <version>3.2.5</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
+                        <!-- <include>**/*Test.java</include> -->
+                        <include>**/PairwiseAlgorithmTest.java</include>
                     </includes>
                     <!-- Generate both TestNG and JUnit compatible reports -->
                     <reportFormat>xml</reportFormat>
