--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ master, develop, 'feature/**' ]
+    branches: [ master, develop ]
   pull_request:
     branches: [ master, develop ]
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   test:
@@ -103,8 +104,6 @@ jobs:
         path: |
           target/spotbugsXml.xml
           target/spotbugs.html
-
-
 
     - name: Run Checkstyle
       run: |
