--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+
+# Eclipse
+.classpath
+.project
+.settings/
+*.launch
+.externalToolBuilders/
+
